<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.odu.cs.teamblack.cs411.thecouponapp.ui.fragments.IncidentLogsFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_incident_logs"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        tools:listitem="@layout/incident_logs_item" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_log_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="32dp"
        app:srcCompat="@drawable/ic_add"
        app:tint="?attr/colorTertiary"
        app:backgroundTint="?attr/colorTertiaryContainer"
        android:contentDescription="@string/add_incident"/>

</FrameLayout>
