...
            android:ems="10"
            android:paddingTop="30dp"
            android:inputType="text"
            android:text="Email" />

        <Switch
            android:id="@+id/Email_Switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Automatically Send Email to Emergency Contact"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <Switch
...
