...
                android:divider="?android:attr/listDivider"
                android:dividerPadding="8dp"
                android:orientation="vertical"
                android:showDividers="middle">

                <include
                    android:id="@+id/accountGroup"
                    layout="@layout/group_account_settings" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Features Section -->
...
