<?xml version="1.0" encoding="utf-8"?>
<!-- This is activity_main.xml layout -->
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:openDrawer="start">

    <!-- This is the main content layout -->
    <androidx.coordinatorlayout.widget.CoordinatorLayout
...
